--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.8.4",
+    "autoprefixer": "^8.6.4",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -25,10 +27,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "ejs-loader": "^0.3.1",
     "eslint": "^5.0.0",
     "eslint-plugin-react": "^7.9.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
