--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "configure:development": "cp ./config/development.js ./config/config.js",
     "configure:production": "cp ./config/production.js ./config/config.js",
     "start": "webpack-dev-server --config ./webpack.config.dev.js --hot --history-api-fallback --progress --mode development",
-    "build": "NODE_ENV=production webpack --config ./webpack.config.prod.js --progress --bail"
+    "build": "NODE_ENV=production webpack --config ./webpack.config.prod.js --history-api-fallback --progress --bail"
   },
   "author": "Francis Mitra",
   "license": "ISC",
   "dependencies": {
     "preact": "^8.2.9",
-    "preact-compat": "^3.18.0",
-    "react-router-dom": "^4.3.1"
+    "preact-router": "^2.6.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.8.4",
@@ -31,11 +30,13 @@
     "css-loader": "^0.28.11",
     "ejs-loader": "^0.3.1",
     "eslint": "^5.0.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.9.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
